--- a/MainApp/src/main/res/values/strings.xml
+++ b/MainApp/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WechatHook</string>
-    <string name="service_name">NonoHook</string>
+    <string name="service_name">WechatHook</string>
     <string name="as_description">微信辅助for nonolive</string>
     <string name="as_not_open">服务未开启，请点击：开启辅助功能！</string>
     <string name="text_send_greeting">Halo.</string>
